# soroban-oracle-safety

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  Makefile  PROMPT.md  README.md  STATUS.md  pnpm-lock.yaml  rust-toolchain.toml
.github/workflows/: ci.yml
configs/: networks.json
contracts/circuit_breaker/: Cargo.toml  Makefile
contracts/circuit_breaker/src/: error.rs  lib.rs  policy.rs  storage.rs  test.rs
contracts/mock_feed/: Cargo.toml  Makefile
contracts/mock_feed/src/: lib.rs  storage.rs  test.rs
contracts/twap_oracle/: Cargo.toml  Makefile
contracts/twap_oracle/src/: lib.rs  storage.rs  test.rs
contracts/twap_oracle/tests/: integration.rs
crates/oracle-safety/: Cargo.toml
crates/oracle-safety/src/: lib.rs
crates/oracle-storage/: Cargo.toml
crates/oracle-storage/src/: admin.rs  error.rs  keys.rs  lib.rs  source.rs  ttl.rs
crates/oracle-test-utils/: Cargo.toml
crates/oracle-test-utils/src/: lib.rs
docs/: ARCHITECTURE.md  BLEND_INTEGRATION.md  DEEP_RESEARCH.md  THREAT_MODEL.md  WAVE.md
scripts/: ci-local.sh  deploy-testnet.sh  install-stellar-cli.sh  setup-dev.sh  verify-all.sh
