[package]
name = "circuit-breaker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
sep-40-oracle = { workspace = true }
oracle-storage = { path = "../../crates/oracle-storage" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sep-40-oracle = { workspace = true, features = ["testutils"] }
mock-feed = { path = "../mock_feed" }

[features]
testutils = ["soroban-sdk/testutils"]
