[package]
name = "oracle-safety"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Off-chain config types and helpers for soroban-oracle-safety"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
